# Gasolineras-GPX-Optimizador-de-Repostaje-en-Ruta

./: .gitignore  INSTRUCCIONES.txt  README.md  app.py  demo_route.gpx  gasolineras_ruta.py  main.py  pyproject.toml  requirements.txt  sierra_gredos.gpx  ui_components.py
.streamlit/: config.toml
.streamlit/static/: manifest.json  sw.js
src/: __init__.py  config.py
src/ingestion/: geocoder.py  gpx_parser.py  miteco.py
src/optimizer/: autonomy.py  cheapest.py  export.py
src/pipeline/: runner.py
src/spatial/: engine.py  nearest.py
src/visualization/: folium_map.py
tests/: conftest.py  test_regression_modular.py  test_regression_monolith.py
tests/fixtures/: sample_track.gpx
